{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "BattleState",
            "id": "fe9c0034-6484-4d2b-8fc4-f7ab5c0731df",
            "actions": [],
            "bindings": []
        },
        {
            "name": "WarState",
            "id": "b6b73a49-0580-4243-82e8-4ab6a5828e1e",
            "actions": [
                {
                    "name": "CameraUp",
                    "type": "Button",
                    "id": "ec32cd6d-c8c1-4563-9f3f-bdbbca28c4c6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraDown",
                    "type": "Button",
                    "id": "e15acdf9-0551-4f1e-ba2f-48c58e87e23f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraLeft",
                    "type": "Button",
                    "id": "6072ef8b-6fc2-4a24-b7a4-a083f0b94eca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraRight",
                    "type": "Button",
                    "id": "c16d1297-669c-4de5-976d-336f3facf65c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f75332b1-b046-4009-8bdd-287bd0e92d2e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9917a466-502b-4585-bdba-5a86fe6e0310",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45a9c415-0bc1-43b7-ad08-9e738b37254c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e684eb6-129c-4f8c-b65c-1a404420c7fe",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "OverWorldState",
            "id": "7f3868ab-d148-4744-aaac-7f45a18e047b",
            "actions": [
                {
                    "name": "PlayerUp",
                    "type": "Button",
                    "id": "93b16519-df9d-45ef-b5ef-2d2a56fcba35",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerDown",
                    "type": "Button",
                    "id": "5e861699-34a9-4bb0-ae2c-9538b401e930",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerLeft",
                    "type": "Button",
                    "id": "62d48f3c-23fb-44a7-bcac-1463098dedee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerRight",
                    "type": "Button",
                    "id": "c110fde1-f717-4ec5-860f-0068967d3573",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerInteract",
                    "type": "Button",
                    "id": "8e5501d6-9f25-47b0-81b1-281c2566f96c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d08331d9-3431-485e-b24d-c3422ef0ea81",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97e76507-a55f-4e97-88bc-fc18363a7cd2",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cdc4c7db-0423-4b29-93ae-3b98d0fb5fda",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b70de18a-3947-4e8a-9aa9-20661cce3462",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "943503b8-2ed1-441c-8fb4-348ffe193c07",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "06510159-93f0-42a5-9341-1069f11c971a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}